[package]
name = "hopframe"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "A simple, easy wrapper for framehop"
repository = "https://github.com/mox692/hopframe"
rust-version = "1.70"

[dependencies]
framehop = { version = "0.13", default-features = false, features = ["std"] }
wholesym = { version = "0.8.1", optional = true }
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_LibraryLoader", "Win32_Foundation", "Win32_System_SystemServices"] }

[features]
default = []
symbolize = ["dep:wholesym"]
aslr = []

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] } # Feature "macros" for #[tokio::test]

[[bench]]
name = "framehop_vs_backtrace"
path = "benches/framehop_vs_backtrace.rs"
harness = false
